# Copyright 2017 Google Inc.
# All Rights Reserved.
#
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
#
#     * Redistributions of source code must retain the above copyright
# notice, this list of conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above
# copyright notice, this list of conditions and the following disclaimer
# in the documentation and/or other materials provided with the
# distribution.
#     * Neither the name of Google Inc. nor the names of its
# contributors may be used to endorse or promote products derived from
# this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#
# Bazel Build for Google C++ Testing Framework (Google Test)

load("@rules_cc//cc:defs.bzl", "cc_library")

config_setting(
    name = "windows",
    constraint_values = ["@bazel_tools//platforms:windows"],
    # This shouldn't be public, but we can't remove it
    # because has been for some time.
    visibility = ["//visibility:public"],
)

config_setting(
    name = "has_absl",
    values = {"define": "absl=1"},
    # This shouldn't be public, but we can't remove it
    # because has been for some time.
    visibility = ["//visibility:public"],
)

# Library that defines the FRIEND_TEST macro.
#
# Deprecated. Use "//googletest:prod" instead.
# TODO: Add deprecation message.
alias(
    name = "gtest_prod",
    actual = "//googletest:prod",
    visibility = ["//visibility:public"],
)

# Google Test including Google Mock.
#
# Deprecated. Use "//googletest" or "//googlemock" instead.
# TODO: Add deprecation message.
cc_library(
    name = "gtest",
    visibility = ["//visibility:public"],
    deps = [
        "//googlemock",
        "//googletest",
    ],
)

# Deprecated. Use "//googlemock:main" instead.
# TODO: Add deprecation message.
alias(
    name = "gtest_main",
    actual = "//googlemock:main",
    visibility = ["//visibility:public"],
)

# Deprecated.
# These are only here because the previous BUILD file made everything public.
# TODO: Add deprecation message.

alias(
    name = "gtest_sample_lib",
    actual = "//googletest/samples:gtest_sample_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "gtest_samples",
    actual = "//googletest/samples:gtest_samples",
    visibility = ["//visibility:public"],
)

alias(
    name = "sample9_unittest",
    actual = "//googletest/samples:sample9_unittest",
    visibility = ["//visibility:public"],
)

alias(
    name = "sample10_unittest",
    actual = "//googletest/samples:sample10_unittest",
    visibility = ["//visibility:public"],
)
